add fileupload plugin

--- a/app/views/dashboardcampaign.scala.html
+++ b/app/views/dashboardcampaign.scala.html
@@ -120,7 +120,7 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 				<div class="row">
 					<div class="col-md-12">
 						<div class="table-responsive">
-							<table class="table table-striped table-bordered data-table" data-bind="datatable: campaigntable, datatableScroller: campaigntablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'percent' }, { sType: 'currency' }, { sType: 'currency' }, { sType: 'date' }, { sType: 'date' } ] }">
+							<table class="table table-striped table-bordered data-table" data-bind="datatable: campaigntable, datatableScroller: campaigntablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'html' }, { sType: 'currency' }, { sType: 'currency' }, { sType: 'date' }, { sType: 'date' } ] }">
 								<thead>
 									<tr>
 										<th class="sorting">Name</th>
