--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -6,15 +6,15 @@
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				<h4 class="modal-title">New/Edit Campaign</h4>
 			</div>
-			<div class="modal-body">
+			<div class="modal-body" data-bind="wizard: campaignstep.currentValue">
 				<h3 class="m-null-top m-btm">Campaign Name: <a href="#" id="campaignename" data-bind="editable: currentcampaign().name" data-type="text" data-pk="1" data-title="Enter Campaign Name">New Campaign</a></h3>
-				<div class="wizard" id="MyWizard">
+				<div class="wizard">
 					<ul class="steps">
-						<li class="complete" data-target="#step1"><span class="badge badge-info">1</span>Step 1 (completed)<span class="chevron"></span></li>
-						<li class="active" data-target="#step2"><span class="badge">2</span>Step 2 (active)<span class="chevron"></span></li>
+                        <li data-target="#step1"><span class="badge badge-info">1</span>Step 1 <span data-bind="text: campaignstep.maxValue() > 1 ? '(completed)' : ''"></span><span class="chevron"></span></li>
+						<li data-target="#step2"><span class="badge">2</span>Step 2 <span data-bind="text: campaignstep.maxValue() > 2 ? '(completed)' : ''"></span><span class="chevron"></span></li>
 						<li data-target="#step3"><span class="badge">3</span>Step 3<span class="chevron"></span></li>
 					</ul>
-				</div>
+        		</div>
 				<div class="step-content">
 					<div id="step1" class="step-pane active">
 						<h3>Select Audience</h3>
@@ -231,7 +231,8 @@
 
 						<h3 class="clearfix">Expected Campaign Results: <span class="pull-right"><span class="legend-revenu">$5000 Revenue</span> - <span class="legend-ad-spent">$1700 AD Spent</span> = <span class="legend-profit">$3300 Profit</span></span></h3>
 
-						<!-- STEP 2 -->
+					</div>
+					<div id="step2" class="step-pane">
 						<div class="box-drag-and-drop-banner text-center">
 							<h3>Drag and Drop Banner Here</h3>
 							<div><img src="@routes.Assets.at("images/banner-examples.png")" alt="" /></div>
@@ -241,7 +242,8 @@
 							<button class="btn btn-primary" type="button">...or choose files</button>
 						</div>
 
-						<!-- STEP 3 -->
+					</div>
+					<div id="step3" class="step-pane">
 						<h3>Your Uploads</h3>
 						<div class="row">
 							<div class="col-md-12">
@@ -294,16 +296,10 @@
 						<h3>Schedule Campaign</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam accumsan placerat augue vel semper. Donec eu tortor sit amet lectus malesuada mattis eu at leo. Curabitur aliquam eros nisi, non sollicitudin diam convallis vitae. Sed laoreet felis ac sem rutrum dapibus. Integer mollis placerat diam, eu lacinia nisi sagittis in. Phasellus nibh ipsum, accumsan eu magna ut, pretium pellentesque quam. Cras accumsan eget dui a blandit. Donec eget urna mattis, interdum leo sit amet, facilisis tortor. Ut varius cursus euismod. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi interdum mollis dui et tempor.</p>
 					</div>
-					<div id="step2" class="step-pane">
-						This is step 2
-					</div>
-					<div id="step3" class="step-pane">
-						This is step 3
-					</div>
 				</div>
 				<div class="actions text-right m-top">
-					<button id="btnWizardPrev" class="btn btn-default" type="button"><span class="glyphicon glyphicon-arrow-left"></span> Prev</button>
-					<button id="btnWizardNext" class="btn btn-default" type="button" data-last="Finish">Next <span class="glyphicon glyphicon-arrow-right"></span></button>
+					<button class="btn btn-prev" type="button"><span class="glyphicon glyphicon-arrow-left"></span> Prev</button>
+					<button class="btn btn-next" type="button" data-last="Finish">Next <span class="glyphicon glyphicon-arrow-right"></span></button>
 				</div>
 			</div>
 			<div class="modal-footer">
