--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -96,14 +96,14 @@
 														<input type="text" class="form-control" id="salescpm" placeholder="" data-bind="value: salesCpm">
 													</div>
 												</div>
-												<div class="col-xs-6">
+                        <div class="col-xs-6" data-bind="datepicker: dates, datepickerOptions: { calendarWeeks: true, autoclose: true, todayHighlight: true }">
 													<div class="form-group">
 														<label for="startdate">Start Date</label>
-														<input type="text" class="form-control" id="startdate" placeholder="" data-bind="value: startDate">
+														<input type="text" class="form-control date-picker" id="startdate" placeholder="">
 													</div>
 													<div class="form-group">
 														<label for="enddate">End Date</label>
-														<input type="text" class="form-control" id="enddate" placeholder="" data-bind="value: endDate">
+														<input type="text" class="form-control date-picker" id="enddate" placeholder="">
 													</div>
 												</div>
 											</div>
@@ -112,12 +112,12 @@
 											<div class="form-group">
 												<label for="audiencereach">Audience Reach</label>
 												<div class="slider">
-													<input id="audiencereach" type="text" class="form-control" value="" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" data-slider-orientation="vertical" data-slider-selection="after" data-slider-tooltip="hide" data-bind="value: reach"/>
+                          <input id="audiencereach" type="text" class="form-control" value="" data-bind="slider: reach, sliderOptions: { min: 0, max: 100, step: 1, value: 50, orientation: 'horizontal', selection: 'after', tooltip: 'hide' }"/>
 												</div>
 											</div>
 											<div class="form-group">
 												<label for="adimpressiongoal">AD Impression Goal</label>
-												<input type="text" class="form-control" id="adimpressiongoal" placeholder="" data-bind="value: count">
+												<input type="text" class="form-control" id="adimpressiongoal" placeholder="Enter goal" data-bind="value: count">
 											</div>
 										</div>
 									</div>
