fixup audience edit

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -772,6 +772,12 @@ nav.loginbar {
 	margin-top:15px;
 }
 
-
+#loader {
+    position:absolute;
+    top:9px;
+    left:5px;
+    width:31px;
+    height:31px;
+}
 
 @import "bootstrap-theme";
