--- a/app/views/elements/modalalert.scala.html
+++ b/app/views/elements/modalalert.scala.html
@@ -1,6 +1,6 @@
 @(model: String)
 <div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" data-bind="attr: { 'id': @{model}.name }">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-alert">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true" data-bind="click: @{model}.dismiss">&times;</button>
