make datepicker available on modal

--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -96,14 +96,18 @@
 														<input type="text" class="form-control" id="salescpm" placeholder="" data-bind="value: salesCpm">
 													</div>
 												</div>
-                        <div class="col-xs-6" data-bind="datepicker: dates, datepickerOptions: { calendarWeeks: true, autoclose: true, todayHighlight: true }">
+                                                <div class="col-xs-6 input-daterange" data-bind="datepicker: dates, datepickerOptions: { calendarWeeks: true, autoclose: true, todayHighlight: true }">
 													<div class="form-group">
 														<label for="startdate">Start Date</label>
-														<input type="text" class="form-control date-picker" id="startdate" placeholder="">
+                                                        <div class="input-group date">
+                                                            <input type="text" class="form-control span2 date-picker" id="startdate" placeholder="Enter start date ..."><span class="input-group-addon btn"><i class="glyphicon glyphicon-th"></i></span>
+                                                        </div>
 													</div>
 													<div class="form-group">
 														<label for="enddate">End Date</label>
-														<input type="text" class="form-control date-picker" id="enddate" placeholder="">
+                                                        <div class="input-group date">
+                                                            <input type="text" class="form-control span2 date-picker" id="enddate" placeholder="Enter end date ..."><span class="input-group-addon btn"><i class="glyphicon glyphicon-th"></i></span>
+                                                        </div>
 													</div>
 												</div>
 											</div>
@@ -112,7 +116,7 @@
 											<div class="form-group">
 												<label for="audiencereach">Audience Reach</label>
 												<div class="slider">
-                          <input id="audiencereach" type="text" class="form-control" value="" data-bind="slider: reach, sliderOptions: { min: 0, max: 100, step: 1, value: 50, orientation: 'horizontal', selection: 'after', tooltip: 'hide' }"/>
+                                                    <input id="audiencereach" type="text" class="form-control" value="" data-bind="slider: reach, sliderOptions: { min: 0, max: 100, step: 1, value: 50, orientation: 'horizontal', selection: 'after', tooltip: 'hide' }"/>
 												</div>
 											</div>
 											<div class="form-group">
@@ -123,7 +127,7 @@
 									</div>
 									<div class="form-group">
 										<div class="col-sm-offset-3 col-sm-9">
-											<button type="submit" class="btn btn-default" data-bind="click: $root.clearpackge">Cancel</button>
+											<button type="button" class="btn btn-default" data-bind="click: $root.clearpackage">Cancel</button>
 											<button type="submit" class="btn btn-primary" data-bind="click: $root.savepackage"><span class="glyphicon glyphicon-floppy-disk"></span> Save Settings</button>
 										</div>
 									</div>
@@ -140,7 +144,11 @@
 							<p>You can drag multiple images here. We don't accept folders or compressed (zip) items.</p>
 						</div>
 						<div class="actions text-center m-top">
-							<input class="btn btn-primary" type="file">...or choose files</button>
+                            <span class="btn btn-success fileinput-button">
+                                <i class="glyphicon glyphicon-plus"></i>
+                                <span>...or choose files</span>
+                                <input id="fileupload" type="file" name="files[]" multiple="">
+                            </span>
 						</div>
 						<h3>Your Uploads</h3>
 						<div class="row">
