--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" media="screen" href="@routes.MainController.minProdWebJarAssetsAt("css/bootstrap.css")">
 	<link rel="stylesheet" media="screen" href="@routes.MainController.minProdWebJarAssetsAt("css/bootstrap-editable.css")">
 	<link rel="stylesheet" media="screen" href="@routes.MainController.minProdWebJarAssetsAt("nv.d3.css")" >
+    <link rel="stylesheet" media="screen" href="@routes.MainController.minProdWebJarAssetsAt("css/jquery.fileupload-ui.css")" >
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 	<link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
 </head>
