--- a/app/views/elements/pagination.scala.html
+++ b/app/views/elements/pagination.scala.html
@@ -8,7 +8,7 @@
 	</p>
 </div>
 <div class="col-xs-6">
-	<ul class="pagination pagination-sm pull-right m-null-top" data-bind="fadeVisible: @{model}.hasData" style="display:none;">
+	<ul class="pagination pagination-sm pull-right m-null-top" data-bind="fadeVisible: @{model}.hasPages" style="display:none;">
 		<li><a href="javascript:void(0)"
 			data-bind="click: @{model}.previous">&laquo;</a></li>
 		<!-- ko foreach: @{model}.visiblePages -->
