--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -147,7 +147,7 @@
                             <span class="btn btn-success fileinput-button">
                                 <i class="glyphicon glyphicon-plus"></i>
                                 <span>...or choose files</span>
-                                <input id="fileupload" type="file" name="files[]" multiple="">
+                                <input type="file" multiple="" data-bind="fileupload: addcreative, fileuploadOptions: {}">
                             </span>
 						</div>
 						<h3>Your Uploads</h3>
