--- a/app/views/admins.scala.html
+++ b/app/views/admins.scala.html
@@ -19,7 +19,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="table-responsive">
-						<table class="table table-striped table-bordered data-table">
+						<table class="table table-striped table-bordered data-table" data-bind="datatable: datatable, datatableScroller: datatablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'string' }, { sType: 'string' }, { sType: 'string' } ] }">
 							<thead>
 								<tr>
 									<th class="sorting">Name</th>
@@ -40,7 +40,7 @@
 		</div>
 		<div class="col-md-3">
 			<p>
-				<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-toggle="modal" data-target="#editAudience"><div></div><span class="glyphicon glyphicon-plus-sign"></span> New Admin</button>
+				<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-toggle="modal" data-target="#editAdmin"><div></div><span class="glyphicon glyphicon-plus-sign"></span> New Admin</button>
 			</p>
 		</div>
 	</div>
