--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -89,11 +89,11 @@
 												<div class="col-xs-6">
 													<div class="form-group">
 														<label for="buycpm">Buy CPM</label>
-														<input type="text" class="form-control" id="buycpm" placeholder="" data-bind="value: buyCpm">
+														<input type="text" class="form-control" id="buycpm" placeholder="" data-bind="value: buyCpm.extend({ currency: 'us' })">
 													</div>
 													<div class="form-group">
 														<label for="salescpm">Sales CPM</label>
-														<input type="text" class="form-control" id="salescpm" placeholder="" data-bind="value: salesCpm">
+														<input type="text" class="form-control" id="salescpm" placeholder="" data-bind="value: salesCpm.extend({ currency: 'us' })">
 													</div>
 												</div>
                                                 <div class="col-xs-6 input-daterange" data-bind="datepicker: dates, datepickerOptions: { calendarWeeks: true, autoclose: true, todayHighlight: true }">
@@ -156,11 +156,10 @@
 								<table class="table table-striped table-bordered table-vertical">
 									<tbody data-bind="foreach: currentcampaign().creatives">
 										<tr>
-											<td class="col-sm-2 col-xs-4"><img src="@routes.Assets.at("images/tmp-banner-your-uploads.png")" alt="" /></td>
+											<td class="col-sm-2 col-xs-4"><img src="@routes.Assets.at("images/tmp-banner-your-uploads.png")" alt="" data-bind="attr: { 'src': url }"/></td>
 											<td class="col-sm-10 col-xs-8">
 												<div class="row">
-													<div class="col-xs-12 col-sm-9">
-														/myimages/banner_1.gif
+													<div class="col-xs-12 col-sm-9" data-bind="text: name">
 													</div>
 													<div class="col-xs-12 col-sm-3 text-right">
 														<button class="btn btn-danger btn-xs" type="button"><span class="glyphicon glyphicon-remove"></span> Delete</button>
