--- a/app/views/publishers.scala.html
+++ b/app/views/publishers.scala.html
@@ -2,7 +2,7 @@
 @templates.main("Publishers") {
 @menu.admin("Publishers")
 @menu.logout(current)
-<script type="text/javascript" data-main="@routes.Assets.at("javascripts/publishers.js")" src="@routes.WebJarAssets.requirejs"></script>
+@helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.Assets.at("javascripts/publishers.js").url)
 <script type="text/javascript">
     //<![CDATA[
     window.data = {};
