--- a/app/views/templates/public.scala.html
+++ b/app/views/templates/public.scala.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-theme.css")">
 	<link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
-	<script type="text/javascript" data-main="@routes.Assets.at("javascripts/app.min.js")" src="@routes.WebJarAssets.requirejs"></script>
+@helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.Assets.at("javascripts/app.js").url)
 </head>
 <body>
 
