--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -100,13 +100,13 @@
 													<div class="form-group">
 														<label for="startdate">Start Date</label>
 														<div class="input-group date">
-															<input type="text" class="form-control span2 date-picker" id="startdate" placeholder="Enter start date ..."><span class="input-group-addon btn"><i class="glyphicon glyphicon-th"></i></span>
+															<input type="text" class="form-control span2 date-picker" id="startdate" placeholder="Enter start date ..."><span class="input-group-addon btn"><span class="glyphicon glyphicon-th"></span></span>
 														</div>
 													</div>
 													<div class="form-group">
 														<label for="enddate">End Date</label>
 														<div class="input-group date">
-															<input type="text" class="form-control span2 date-picker" id="enddate" placeholder="Enter end date ..."><span class="input-group-addon btn"><i class="glyphicon glyphicon-th"></i></span>
+															<input type="text" class="form-control span2 date-picker" id="enddate" placeholder="Enter end date ..."><span class="input-group-addon btn"><span class="glyphicon glyphicon-th"></span></span>
 														</div>
 													</div>
 												</div>
@@ -145,7 +145,7 @@
 						</div>
 						<div class="actions text-center m-top">
 							<span class="btn btn-success fileinput-button">
-								<i class="glyphicon glyphicon-plus"></i>
+								<span class="glyphicon glyphicon-plus"></span>
 								<span>...or choose files</span>
 								<input type="file" multiple="" data-bind="fileupload: addcreative, fileuploadOptions: {}">
 							</span>
