--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -780,4 +780,104 @@ nav.loginbar {
     height:31px;
 }
 
+.control-group.warning .help-block,
+.control-group.warning .control-label {
+  color: #c09853;
+}
+
+.control-group.warning .form-control {
+  border-color: #c09853;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.control-group.warning .form-control:focus {
+  border-color: #a47e3c;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #dbc59e;
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #dbc59e;
+}
+
+.control-group.warning .input-group-addon {
+  color: #c09853;
+  background-color: #fcf8e3;
+  border-color: #c09853;
+}
+
+.control-group.error .help-block,
+.control-group.error .control-label {
+  color: #b94a48;
+}
+
+.control-group.error .form-control {
+  border-color: #b94a48;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.control-group.error .form-control:focus {
+  border-color: #953b39;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
+}
+
+.control-group.error .input-group-addon {
+  color: #b94a48;
+  background-color: #f2dede;
+  border-color: #b94a48;
+}
+
+.control-group.success .help-block,
+.control-group.success .control-label {
+  color: #468847;
+}
+
+.control-group.success .form-control {
+  border-color: #468847;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.control-group.success .form-control:focus {
+  border-color: #356635;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
+}
+
+.control-group.success .input-group-addon {
+  color: #468847;
+  background-color: #dff0d8;
+  border-color: #468847;
+}
+
+.glyph-h1 {
+  margin: 0 12px;
+  font-size: 36px;
+}
+
+.glyph-h2 {
+  margin: 0 10px;
+  font-size: 30px;
+}
+
+.glyph-h3 {
+  margin: 0 8px;
+  font-size: 24px;
+}
+
+.glyph-h4 {
+  margin: 0 6px;
+  font-size: 18px;
+}
+
+.glyph-h5 {
+  margin: 0 4px;
+  font-size: 14px;
+}
+
+.glyph-h6 {
+  margin: 0 2px;
+  font-size: 12px;
+}
+
+
 @import "bootstrap-theme";
