--- a/app/views/elements/searchbar.scala.html
+++ b/app/views/elements/searchbar.scala.html
@@ -4,7 +4,7 @@
 	</select>
 </div>
 <div class="col-xs-6">
-	<form role="search" action="javascript:void()">
+	<form role="search" action="javascript:void(0)">
 		<div class="input-group m-btm">
 			<input type="text" data-bind="value: @{model}.query" placeholder="Search ..." class="form-control">
 			<span class="input-group-btn">
