--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -25,7 +25,7 @@
 										<div class="jcarousel" data-bind="carousel: audienceposition">
 											<ul data-bind="foreach: currentaudiences">
 												<li>
-													<a href="javascript:void()" class="website-block" data-bind="click: $root.selectaudience, css: {'selected': selected(), 'active': active()}">
+													<a href="javascript:void(0)" class="website-block" data-bind="click: $root.selectaudience, css: {'selected': selected(), 'active': active()}">
 														<span class="website-name" data-bind="text: name"></span>
 														<span class="thumbnail-site">
 															<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
@@ -48,7 +48,7 @@
 							<div class="clearfix">
 								<div class="website-block-wrapper">
 									<div class="website-block-add-wrapper">
-										<a href="javascript:void()" class="website-block-add" data-bind="click: newpackage">
+										<a href="javascript:void(0)" class="website-block-add" data-bind="click: newpackage">
 											<span class="website-name">Add New Package</span>
 											<span class="thumbnail-site">
 												<img alt="" src="@routes.Assets.at("images/thumbnail-add.gif")" />
@@ -59,7 +59,7 @@
 										<div class="jcarousel" data-bind="carousel: packageposition">
 											<ul data-bind="foreach: currentpackages">
 												<li>
-													<a href="javascript:void()" class="website-block" data-bind="click: $root.selectpackage, css: {'selected': selected(), 'active': active()}">
+													<a href="javascript:void(0)" class="website-block" data-bind="click: $root.selectpackage, css: {'selected': selected(), 'active': active()}">
 														<span class="website-name" data-bind="text: name"></span>
 														<span class="thumbnail-site">
 															<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
